--- a/templates/dekurzy/menu.html
+++ b/templates/dekurzy/menu.html
@@ -104,14 +104,16 @@
 
         <div id="patient-list">
             {% for patient in patients %}
-            <a href="#" 
-                class="small-token" 
-                data-id="{{ patient.id }}" data-meno="{{ patient.meno }}"
-                data-rc="{{ patient.rodne_cislo }}" data-adresa="{{ patient.adresa }}">
-                {{ patient.meno }} — {{ patient.rodne_cislo }}
-            </a>
+            <div class="patient-entry">
+                <a href="#" class="small-token" data-id="{{ patient.id }}" data-meno="{{ patient.meno }}"
+                    data-rc="{{ patient.rodne_cislo }}" data-adresa="{{ patient.adresa }}">
+                    {{ patient.meno }} — {{ patient.rodne_cislo }}
+                </a>
+                <button class="delete-patient-btn" data-id="{{ patient.id }}">X</button>
+            </div>
             {% endfor %}
         </div>
+
 
     </div>
 
@@ -131,7 +133,7 @@
 {% endblock %}
 
 {% block styles %}
-<link rel="stylesheet" href="{{ url_for('static', filename='css/menu.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/dekurzy/menu.css') }}">
 {% endblock %}
 
 {% block scripts %}
