--- a/templates/dekurzy/vypis.html
+++ b/templates/dekurzy/vypis.html
@@ -121,7 +121,7 @@
 {% endblock %}
 
 {% block styles %}
-<link rel="stylesheet" href="{{ url_for('static', filename='css/menu.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/dekurzy/menu.css') }}">
 {% endblock %}
 
 {% block scripts %}
