--- a/static/css/dekurzy/menu.css
+++ b/static/css/dekurzy/menu.css
@@ -17,13 +17,25 @@
     text-transform: capitalize;
 }
 
-.delete-button {
+.small-token.delete-button {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px;
+    text-decoration: none;
+    padding: 6px 10px;
+    color: #fff;
 }
 
-.delete-button btn {
-    background-color: none;
+.small-token.delete-button span {
+    margin: 0 auto;
+}
+
+.delete-patient-btn {
+    flex-shrink: 0;
+    background: none;
+    border: none;
+    cursor: pointer;
+    font-size: 1rem;
+    width: fit-content;
+    color: #fff;
 }
