--- a/templates/transport/transport.html
+++ b/templates/transport/transport.html
@@ -14,6 +14,8 @@
         {% endif %}
     </h1>
 
+    <input type="hidden" id="file_id" value="{{ file_id }}">
+
     {% if session.get('nurse') %}
 
     <div class="section">
