bug fixes, additional functionality

--- a/templates/create/patient.html
+++ b/templates/create/patient.html
@@ -42,6 +42,11 @@
             <div id="address-suggestions" class="suggestions"></div>
         </div>
 
+        <div class="form-group">
+            <label>Vyber na mape</label>
+            <div id="map" style="height: 300px;">
+        </div>
+
         <input type="hidden" name="sestra" value="{{ session['nurse']['id'] }}">
        
         <div class="form-group">
