--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -41,7 +41,7 @@
         <button class="scroll-arrow left" onclick="scrollDekurzy(-1)">
             <i class="bi bi-chevron-left"></i>
         </button>
-    
+
         <div class="scroll" id="monthScroll">
             {% for month_dekurz in months_dekurz %}
             <a href="#" class="small-small-token transport-select" data-id="{{ month_dekurz.id }}"
@@ -52,7 +52,37 @@
             </a>
             {% endfor %}
         </div>
-    
+
+        <button class="scroll-arrow right" onclick="scrollDekurzy(1)">
+            <i class="bi bi-chevron-right"></i>
+        </button>
+    </div>
+</div>
+
+<div class="section">
+    <div class="lined-heading"><span>Documents</span></div>
+
+    <div class="scroll-wrapper">
+        <button class="scroll-arrow left" onclick="scrollDekurzy(-1)">
+            <i class="bi bi-chevron-left"></i>
+        </button>
+
+        <div class="scroll" id="monthScroll">
+            <a href="{{ url_for('documents.showNavrh') }}" class="small-small-token">
+                Нávrh na poskytovanie
+                <br>
+                ošetrovateľskej starostlivosti
+            </a>
+            <a href="{{ url_for('documents.showZaznam') }}" class="small-small-token">
+                Оšetrovateľský záznam
+            </a>
+            <a href="{{ url_for('documents.showDohoda') }}" class="small-small-token">
+                Dohoda o poskytovaní zdravotnej starostlivosti
+                <br>
+                v rozsahu ošetrovateľskej starostlivosti
+            </a>
+        </div>
+
         <button class="scroll-arrow right" onclick="scrollDekurzy(1)">
             <i class="bi bi-chevron-right"></i>
         </button>
