--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
 
     <script src="{{ url_for('static', filename='js/navbar.js') }}"></script>
 
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/documents/main.css') }}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@200;300;400;500;700&display=swap">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
@@ -22,7 +23,7 @@
 
 <body>
     <header>
-        <div class="navbar">
+        <div class="navbar no-print">
             <div class="navbar-section" style="gap: 0px;">
                 <button id="backBtn" class="text-button" onclick="history.back();" style="padding: 10px;">
                     <i style="color: #fff;" class="bi bi-arrow-left"></i>
