--- a/templates/documents/navrh.html
+++ b/templates/documents/navrh.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block title %}ADOS - Návrh{% endblock %}
+
 {% block content %}
 
 <link rel="stylesheet" href="{{ url_for('static', filename='css/documents/main.css') }}">
