--- a/templates/details/patients.html
+++ b/templates/details/patients.html
@@ -10,6 +10,9 @@
         <input type="text" id="searchInput" placeholder="Vyhľadaj pacienta podľa mena alebo rodného číslo..." />
     </div>
 
+    <a href="{{ url_for('patient.create_patient') }}"" class="small-token">
+        Pridať pacienta
+    </a>
     <div id="results">
         {% for patient in patients %}
         <a href="{{ url_for('patient.update_patient', id=patient.id) }}" class="small-token">
