--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -14,6 +14,9 @@
         </button>
 
         <div class="scroll" id="monthScroll">
+            <a href="{{ url_for('month.create_month') }}" class="small-small-token">
+                novy
+            </a>
             {% for month_dekurz in months_dekurz %}
             <a href="#" class="small-small-token month-select" data-id="{{ month_dekurz.id }}" data-mesiac="{{ month_dekurz.mesiac }}"
                 data-rok="{{ month_dekurz.rok }}" data-prvy-den="{{ month_dekurz.prvy_den }}" data-vysetrenie ="{{ month_dekurz.vysetrenie_start }}" data-vypisanie="{{ month_dekurz.vypis_start }}"
@@ -27,10 +30,6 @@
             <i class="bi bi-chevron-right"></i>
         </button>
     </div>
-
-    <a class="text-button" href="{{ url_for('month.create_month') }}">
-        vypísať nový mesiac <i class="bi bi-arrow-right"></i>
-    </a>
 </div>
 
 
@@ -67,7 +66,7 @@
     </button>
 
     <button class="small-token" type="button" onclick="window.location.href='{{ url_for('documents.showZaznam') }}';" style="width: 700px;">
-        Оšetrovateľský záznam
+        Ošetrovateľský záznam
     </button>
 
     <button class="small-token" type="button" onclick="window.location.href='{{ url_for('documents.showDohoda') }}';" style="width: 700px;">
