--- a/templates/base.html
+++ b/templates/base.html
@@ -29,10 +29,11 @@
                     <i style="color: #fff;" class="bi bi-arrow-left"></i>
                 </button>
 
-                <button class="text-button" style="padding: 10px;" onclick="window.location.href='{{ url_for('main.index') }}'">
-                    <i style="color: #fff;" class="bi bi-house"></i>
-                </button>
-
+                {% if current_user.is_authenticated and session.get('nurse')%}
+                    <button class="text-button" style="padding: 10px;" onclick="window.location.href='{{ url_for('main.dashboard') }}'">
+                        <i style="color: #fff;" class="bi bi-house"></i>
+                    </button>
+                {% endif %}
                 <a href="{{ url_for('main.index') }}" class="logo" style="margin-left: 20px;">
                     <h1 class="logo" style="margin: 0;">ADOS</h1>
                 </a>
