--- a/templates/auth.html
+++ b/templates/auth.html
@@ -3,16 +3,18 @@
 {% block title %}Login Page{% endblock %}
 
 {% block content %}
-<h2>Login</h2>
-<form method="post">
-    <div class="form-group">
-        <label for="username">Username</label>
-        <input type="text" name="username" id="username" placeholder="Enter username">
-    </div>
-    <div class="form-group">
-        <label for="password">Password</label>
-        <input type="password" name="password" id="password" placeholder="Enter password">
-    </div>
-    <button type="submit" class="btn">Login</button>
-</form>
+<div class="section">
+    <div class="lined-heading"><span style="color: #333; font-size: 1.5em;">Prihlásenie</span></div>
+    <form method="post">
+        <div class="form-group">
+            <label for="username">Používateľské meno</label>
+            <input type="text" name="username" id="username" placeholder="Zadajte používateľské meno">
+        </div>
+        <div class="form-group">
+            <label for="password">Heslo</label>
+            <input type="password" name="password" id="password" placeholder="Zadajte heslo">
+        </div>
+        <button type="submit" class="btn"> Prihlásiť sa</button>
+    </form>
+</div>
 {% endblock %}
