add using of flatpickr to "nvrh" page

--- a/templates/documents/navrh.html
+++ b/templates/documents/navrh.html
@@ -139,6 +139,8 @@
 {% endblock %}
 
 {% block scripts %}
+<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+<script src="https://cdn.jsdelivr.net/npm/flatpickr/dist/l10n/sk.js"></script>
 <script src="{{ url_for('static', filename='js/documents/navrh.js') }}"></script>
 <script src="{{ url_for('static', filename='js/documents/navrhIllnessList.js') }}"></script>
 {% endblock %}
