--- a/static/css/dekurzy/menu.css
+++ b/static/css/dekurzy/menu.css
@@ -36,6 +36,19 @@
     border: none;
     cursor: pointer;
     font-size: 1rem;
-    width: fit-content;
     color: #fff;
+}
+
+.section-wrapper {
+    display: flex;
+    gap: 20px;
+}
+
+.half-section {
+    width: 50%;
+    min-width: 500px;
+}
+
+#patient-list {
+    width: 100%;
 }
