--- a/static/css/global.css
+++ b/static/css/global.css
@@ -266,6 +266,35 @@ textarea {
     margin-bottom: 10px;
 }
 
+.small-token-full {
+    padding: 8px;
+    background: #5C9EAD;
+    border-radius: 20px;
+    cursor: pointer;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+    border: none;
+    min-width: max-content;
+    text-decoration: none;
+    font-size: 16px;
+    margin-bottom: 10px;
+    width: 100%;
+}
+
+.outlined {
+    background: transparent;
+    color: #5C9EAD;
+    border: solid 1px #5C9EAD;
+}
+
+.outlined:hover {
+    background: #5C9EAD;
+    color: white;
+}
+
 .active-patient {
     background-color: #333;
 }
