add phone number to nurses

--- a/templates/details/nurse.html
+++ b/templates/details/nurse.html
@@ -12,6 +12,10 @@
             <input type="text" name="meno" id="meno" value="{{ nurse.meno }}" required>
         </div>
         <div class="form-group">
+            <label for="phone_number">Telefónne číslo</label>
+            <input type="text" name="phone_number" id="phone_number" value="{{ nurse.phone_number }}" required>
+        </div>
+        <div class="form-group">
             <label for="kod">Kód</label>
             <input type="text" name="kod" id="kod" value="{{ nurse.kod }}">
         </div>
