--- a/templates/create/nurse.html
+++ b/templates/create/nurse.html
@@ -12,6 +12,10 @@
             <input type="text" name="meno" id="meno" required>
         </div>
         <div class="form-group">
+            <label for="phone_number">Telefónne číslo</label>
+            <input type="text" name="phone_number" id="phone_number" required>
+        </div>
+        <div class="form-group">
             <label for="kod">Kód</label>
             <input type="text" name="kod" id="kod">
         </div>
