database added global_doktori

--- a/templates/dekurzy/menu.html
+++ b/templates/dekurzy/menu.html
@@ -129,7 +129,7 @@
     </div>
 
     <div class="bottom-section">
-        <button id="generate_schedule" class="btn" type="submit" style="width: 600px; margin-bottom: 20px;">Uložiť</button>
+        <button id="generate_schedule" class="btn" type="submit" style="width: 600px; margin-bottom: 20px;">Prejsť na písanie dekurzov</button>
     </div>
 
     <div id="loader" class="loader-overlay">
