--- a/templates/dekurzy/menu.html
+++ b/templates/dekurzy/menu.html
@@ -119,7 +119,7 @@
                         data-rc="{{ patient.rodne_cislo }}" data-adresa="{{ patient.adresa }}">
                         {{ patient.meno }} — {{ patient.rodne_cislo }}
                     </a>
-                    <button class="delete-patient-btn" data-id="{{ patient.id }}">X</button>
+                    <button class="delete-btn" data-id="{{ patient.id }}">X</button>
                 </div>
                 {% endfor %}
             </div>
